fix spacing at bottom of cards

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -654,6 +654,10 @@ video {
   margin-top: 1rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .block {
   display: block;
 }
